--- a/src/components/Footer/styles/footer.sass
+++ b/src/components/Footer/styles/footer.sass
@@ -70,3 +70,36 @@
     .two
         margin-top: $m64mob
         margin-bottom: $m64mob
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .footer
+
+        .footer-container
+
+            .row
+                margin-top: $m32tab !important
+
+                .nav-link
+
+                    .footer-heading
+                        color: $primary_gray
+                        font-family: Lato
+                        font-size: $font24tab
+                        font-style: normal
+                        font-weight: 700
+                        line-height: 142.857%
+
+                    .links
+                        margin-top: $m16tab !important
+
+                        .link
+                            color: $secondary_text
+                            font-family: Lato
+                            font-size: $font20tab
+                            font-style: normal
+                            font-weight: 400
+                            line-height: 142.857%
+
+                .help
+                    margin-right: $m32tab
