--- a/src/components/TopList/styles/top_list.css
+++ b/src/components/TopList/styles/top_list.css
@@ -17,4 +17,25 @@
 .top-list .top-swiper .swiper-wrapper {
   display: flex;
   flex-direction: row;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .top-swiper {
+    display: none !important;
+  }
+  .tablet-top-list {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin-top: clamp(32px, 6.8743286788vw, 128px);
+  }
+  .tablet-top-list .row {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: clamp(16px, 3.4371643394vw, 64px);
+  }
 }/*# sourceMappingURL=top_list.css.map */
