--- a/src/components/TopList/styles/top_list.sass
+++ b/src/components/TopList/styles/top_list.sass
@@ -18,3 +18,23 @@
         .swiper-wrapper
             display: flex
             flex-direction: row
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .top-swiper
+        display: none !important
+
+    .tablet-top-list
+        width: 100%
+        height: auto
+        display: flex
+        flex-direction: column
+        margin-top: $m64tab
+
+        .row
+            width: 100%
+            height: auto
+            display: flex
+            align-items: center
+            justify-content: space-between
+            margin-top: $m32tab
