--- a/src/components/TrendingList/TrendingCard/styles/trending_card.sass
+++ b/src/components/TrendingList/TrendingCard/styles/trending_card.sass
@@ -138,6 +138,9 @@
         flex-direction: column
         margin-bottom: $m64tab
 
+        .label
+            display: none
+
         .card-image
             width: 100%
             height: clamp(172px,44.791666666666664vw,688px)
