--- a/src/pages/SearchResult/styles/search_results.sass
+++ b/src/pages/SearchResult/styles/search_results.sass
@@ -45,3 +45,67 @@
 
     .next
         margin-bottom: $m16mob
+
+.tablet-content
+    display: none
+
+.possible-products
+    display: none
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .tablet-content
+        width: 100%
+        display: flex !important
+        flex-direction: column
+        align-items: center
+
+        .tablet-container
+            width: 100%
+            height: auto
+            display: flex
+            align-items: center
+            justify-content: space-between
+
+            .illustration
+                width: clamp(179px,42.92565947242206vw,716px)
+                height: clamp(213.5px,51.199040767386094vw,854px)
+                margin-right: $m16tab
+
+            .attention-window
+                width: clamp(227px,54.436450839328536vw,908px) !important
+                height: auto
+
+                .window-heading
+                    color: $primary_gray
+                    font-feature-settings: 'clig' off, 'liga' off
+                    font-family: Lato
+                    font-size: $font18tab
+                    font-style: normal
+                    font-weight: 600
+                    line-height: 125%
+                    margin-top: $m32tab
+
+                .attention-icon
+                    font-size: $font18tab
+
+                .icon-text
+                    font-size: $font18tab
+
+    .possible-products
+        width: 100%
+        height: auto
+        background-color: #F5F5F5
+        display: flex !important
+
+        .cards
+            width: 90%
+            display: flex
+            flex-direction: row !important
+            align-items: center
+            justify-content: space-between
+            margin: auto
+
+            .card
+                width: clamp(103px,24.700239808153476vw,412px)
+                background-color: $white
