--- a/src/pages/Login/styles/login.sass
+++ b/src/pages/Login/styles/login.sass
@@ -157,7 +157,7 @@
                         text-align: center
                         font-feature-settings: 'clig' off, 'liga' off
                         font-family: Lato
-                        font-size: 14px
+                        font-size: $font14mob
                         font-style: normal
                         font-weight: 500
 
@@ -209,3 +209,256 @@
                             line-height: 142.857%
                             text-decoration: none
                             margin-left: clamp(2px,0.93456vw,8px)
+
+    .tablet-content
+        display: none
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .tablet-content
+        width: 90%
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+
+        .back-heading
+            width: 100%
+            display: flex
+            align-items: center
+            justify-content: flex-end
+            margin-top: $m32
+
+            .text
+                color: $secondary_text
+                font-family: Lato
+                font-size: $font18tab
+                font-style: normal
+                font-weight: 600
+                line-height: 213.242%
+
+            .chevron
+                margin-right: $m8tab
+
+        .forms
+            width: 100%
+            height: auto
+            display: flex
+            flex-direction: row
+            justify-content: space-between
+
+            .sign-in-content
+                width: auto
+                height: auto
+                display: flex
+                flex-direction: column
+
+                .sign-in-heading
+                    color: #000
+                    font-family: Lato
+                    font-size: $font20tab
+                    font-style: normal
+                    font-weight: 600
+                    line-height: normal
+
+                .form
+                    width: auto
+                    display: flex
+                    flex-direction: column
+                    align-items: flex-start
+
+                    .email-input-container-l, .password-input-container
+                        width: 100%
+                        height: auto
+                        display: flex
+                        flex-direction: column
+
+                        .label
+                            color: $primary_gray
+                            font-family: Lato
+                            font-size: $font20tab
+                            font-style: normal
+                            font-weight: 400
+                            line-height: normal
+                            margin-top: $m16tab
+
+                            .required
+                                color: $spotlight_red
+
+                        .email-input, .password-input
+                            width: clamp(160px,41.666666666666664vw,640px)
+                            height: clamp(20px,5.208333333333333vw,80px)
+                            padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                            border: 1px solid $gray
+                            border-radius: 4px
+                            margin-top: $m16tab
+
+                            &:focus
+                                outline: none
+                                border: 1px solid $primary_gray
+
+                        .email-input-error, .password-input-error
+                            width: clamp(160px,41.666666666666664vw,640px)
+                            height: clamp(20px,5.208333333333333vw,80px)
+                            padding-left: clamp(5px, 1.3020833333333333vw,20px)
+                            border: 1px solid #FF2E00
+                            border-radius: 4px
+                            margin-top: $m16tab
+                            &:focus
+                                outline: none
+                                border: 1px solid $primary_gray
+
+                        .error
+                            color: #FF2E00
+                            font-family: Lato
+                            font-size: $font14tab
+                            font-style: normal
+                            font-weight: 400
+                            line-height: 83.333%
+                            margin-top: $m16tab
+
+                    .password-input-container
+                        margin-top: $m16tab
+
+                    .lower-container-l
+                        width: 100%
+                        display: flex
+                        justify-content: space-between
+                        align-items: center
+                        margin-top: $m16tab
+
+                        .checkbox-container
+                            display: flex
+                            align-items: center
+
+                            .checkbox
+                                width: clamp(10px,2.6041666666666665vw,40px)
+                                height: clamp(10px,2.6041666666666665vw,40px)
+
+                            .checkbox-label
+                                color: $primary_gray
+                                font-family: Lato
+                                font-size: $font14tab
+                                font-style: normal
+                                font-weight: 400
+                                line-height: normal
+                                margin-left: $m8tab
+
+                        .password-link
+                            color: $button_blue
+                            font-family: Lato
+                            font-size: $font14tab
+                            font-style: normal
+                            font-weight: 400
+                            line-height: normal
+                            text-decoration-line: underline
+
+                    .form-button
+                        width: 100%
+                        height: clamp(28px,7.291666666666667vw,112px)
+                        color: $white
+                        text-align: center
+                        font-feature-settings: 'clig' off, 'liga' off
+                        font-family: Lato
+                        font-size: $font16tab
+                        font-style: normal
+                        font-weight: 500
+                        line-height: 142.857%
+                        text-transform: uppercase
+                        background-color: $gray
+                        border: none
+                        border-radius: 4px
+                        margin-top: $m32tab
+                        transition: 0.3s all
+                        &:hover
+                            background-color: $gray_dark
+
+                    .form-button-active
+                        width: 100%
+                        height: clamp(28px,7.291666666666667vw,112px)
+                        color: $white
+                        text-align: center
+                        font-feature-settings: 'clig' off, 'liga' off
+                        font-family: Lato
+                        font-size: $font16tab
+                        font-style: normal
+                        font-weight: 500
+                        line-height: 142.857%
+                        text-transform: uppercase
+                        background-color: $button_blue
+                        border: none
+                        border-radius: 4px
+                        margin-top: $m32tab
+                        transition: 0.3s all
+                        &:hover
+                            background-color: #265BCF
+
+                    .divider-container
+                        width: 100%
+                        height: auto
+                        display: flex
+                        justify-content: space-between
+                        align-items: center
+                        margin-top: $m16mob
+
+                        .divider
+                            width: 42%
+                            height: 1px
+                            background-color: $light_text
+
+                        .text
+                            color: $light_text
+                            text-align: center
+                            font-feature-settings: 'clig' off, 'liga' off
+                            font-family: Lato
+                            font-size: $font14tab
+                            font-style: normal
+                            font-weight: 500
+
+                    .google-button
+                        width: 100%
+                        height: clamp(28px,7.291666666666667vw,112px)
+                        color: $white
+                        text-align: center
+                        font-feature-settings: 'clig' off, 'liga' off
+                        font-family: Lato
+                        font-size: $font16tab
+                        font-style: normal
+                        font-weight: 500
+                        line-height: 142.857%
+                        background-color: $gray_dark
+                        display: flex
+                        align-items: center
+                        justify-content: center
+                        border: none
+                        border-radius: 4px
+                        margin-top: $m16tab
+                        transition: 0.3s all
+                        &:hover
+                            background-color: $button_blue
+
+                        .google-icon
+                            margin-right: $m8tab
+
+                    .text-container
+                        width: 100%
+                        height: auto
+                        text-align: center
+                        margin-top: $m32tab
+
+                        .link-text
+                            color: $primary_gray
+                            font-feature-settings: 'clig' off, 'liga' off
+                            font-family: Lato
+                            font-size: $font14tab
+                            font-style: normal
+                            font-weight: 500
+                            line-height: 142.857%
+
+                            .sign-up-link
+                                color: $selected
+                                font-size: $font14tab
+                                font-style: normal
+                                font-weight: 900
+                                line-height: 142.857%
+                                text-decoration: none
+                                margin-left: clamp(2px, 0.5208333333333334vw,8px)
