--- a/src/pages/Login/styles/login.sass
+++ b/src/pages/Login/styles/login.sass
@@ -246,7 +246,7 @@
             flex-direction: row
             justify-content: space-between
 
-            .sign-in-content
+            .sign-in-content, .sign-up-content
                 width: auto
                 height: auto
                 display: flex
@@ -265,6 +265,7 @@
                     display: flex
                     flex-direction: column
                     align-items: flex-start
+                    margin-top: $m16tab
 
                     .email-input-container-l, .password-input-container
                         width: 100%
@@ -285,7 +286,7 @@
                                 color: $spotlight_red
 
                         .email-input, .password-input
-                            width: clamp(160px,41.666666666666664vw,640px)
+                            width: clamp( 150px,39.0625vw,600px)
                             height: clamp(20px,5.208333333333333vw,80px)
                             padding-left: clamp(5px, 1.3020833333333333vw,20px)
                             border: 1px solid $gray
@@ -297,7 +298,7 @@
                                 border: 1px solid $primary_gray
 
                         .email-input-error, .password-input-error
-                            width: clamp(160px,41.666666666666664vw,640px)
+                            width: clamp( 150px,39.0625vw,600px)
                             height: clamp(20px,5.208333333333333vw,80px)
                             padding-left: clamp(5px, 1.3020833333333333vw,20px)
                             border: 1px solid #FF2E00
@@ -306,6 +307,25 @@
                             &:focus
                                 outline: none
                                 border: 1px solid $primary_gray
+
+                        .password-show-container
+                            position: relative
+                            width: 100%
+                            height: auto
+                            flex-direction: row
+                            align-items: center
+
+                            .eye-btn
+                                position: absolute
+                                cursor: pointer
+                                top: clamp(12.5px, 3.2552083333333335vw,50px)
+                                right: $m16tab
+                                background-color: transparent
+                                border: none
+
+                                .eye-icon
+                                    color: $gray
+                                    font-size: clamp(8.5px,2.2135416666666665vw,34px)
 
                         .error
                             color: #FF2E00
@@ -462,3 +482,9 @@
                                 line-height: 142.857%
                                 text-decoration: none
                                 margin-left: clamp(2px, 0.5208333333333334vw,8px)
+
+            .separator-line
+                width: 1px
+                height: 1px
+                background-color: $gray_dark
+                rotate: 90deg
